--- a/STAT-370-PROJ-MODELS.qmd
+++ b/STAT-370-PROJ-MODELS.qmd
@@ -291,40 +291,49 @@ where:
 ### Site A - unexposed
 
 ```{r}
-table(wave_a$density)
+model_zero_a <- zeroinfl(density ~ water_depth , data = wave_a, dist="poisson")
 
-unique(sort(round(log(wave_a$density+1))))
-unique(sort(round(log(wave_a$density+1)*10)))
-unique(sort(wave_a$density))
+summary(model_zero_a)
 
-wave_a$log_density <- round(log(wave_a$density+1)*10)
+poisson_model_b <- glm(density ~ water_depth, family = poisson, data = wave_a)
+vuong(model_zero_a, poisson_model_b)
 
-model_zero_a <- zeroinfl(log_density ~ fetch_projected , data = wave_a, dist="negbin")
+AIC(model_zero_a, poisson_model_b)
+BIC(model_zero_a, poisson_model_b)
 
-estimates(model_zero_a)
+observed_a <- table(wave_a$density)
+predicted_a <- table(round(predict(model_zero_a, type = "response")))
+
+barplot(rbind(observed_a, predicted_a), beside = TRUE, col = c("black", "red"), legend.text = c("Observed", "Predicted"))
+
+###
 
 resid_a <- residuals(model_zero_a)
 
 moran_resid_test <- moran.test(resid_a, weights_a)
 
-print(moran_resid_test) # significant
-summary(model_zero_a)
+print(moran_resid_test) # insignificant
 ```
 
 ### Site B - unexposed
 
 ```{r}
-table(wave_b$density)
+model_zero_b <- zeroinfl(density ~ water_depth , data = wave_b, dist="poisson")
 
-unique(sort(round(log(wave_b$density+1))))
-unique(sort(round(log(wave_b$density+1)*10)))
-unique(sort(wave_b$density))
+summary(model_zero_b)
 
-wave_b$log_density <- round(log(wave_b$density+1)*10)
+poisson_model_b <- glm(density ~ water_depth, family = poisson, data = wave_b)
+vuong(model_zero_b, poisson_model_b)
 
-model_zero_b <- zeroinfl(log_density ~ fetch_projected , data = wave_b, dist="negbin")
+AIC(model_zero_b, poisson_model_b)
+BIC(model_zero_b, poisson_model_b)
 
-estimates(model_zero_b)
+observed_b <- table(wave_b$density)
+predicted_b <- table(round(predict(model_zero_b, type = "response")))
+
+barplot(rbind(observed_b, predicted_b), beside = TRUE, col = c("black", "red"), legend.text = c("Observed", "Predicted"))
+
+###
 
 resid_b <- residuals(model_zero_b)
 
@@ -336,17 +345,23 @@ print(moran_resid_test) # insignificant
 ### Site C - unexposed
 
 ```{r}
-table(wave_c$density)
+model_zero_c <- zeroinfl(density ~ water_depth , data = wave_c, dist="poisson")
 
-unique(sort(round(log(wave_c$density+1))))
-unique(sort(round(log(wave_c$density+1)*10)))
-unique(sort(wave_c$density))
+summary(model_zero_c)
 
-wave_c$log_density <- round(log(wave_c$density+1)*10)
+poisson_model_c <- glm(density ~ water_depth , family = poisson, data = wave_c)
+vuong(model_zero_c, poisson_model_c)
 
-model_zero_c <- zeroinfl(log_density ~ fetch_projected , data = wave_c, dist="negbin")
+AIC(model_zero_c, poisson_model_c)
+BIC(model_zero_c, poisson_model_c)
 
-estimates(model_zero_c)
+observed_c <- table(wave_c$density)
+predicted_c <- table(round(predict(model_zero_c, type = "response")))
+
+barplot(rbind(observed_c, predicted_c), beside = TRUE, col = c("black", "red"),
+        legend.text = c("Observed", "Predicted"))
+
+###
 
 resid_c <- residuals(model_zero_c)
 
@@ -358,35 +373,28 @@ print(moran_resid_test) # significant
 ### Site D - unexposed
 
 ```{r}
-table(wave_d$density)
+model_zero_d <- zeroinfl(density ~ water_depth , data = wave_d, dist="poisson")
 
-unique(sort(round(log(wave_d$density+1))))
-unique(sort(round(log(wave_d$density+1)*10)))
-unique(sort(wave_d$density))
+summary(model_zero_d)
 
-wave_d$log_density <- round(log(wave_d$density+1)*10)
+poisson_model_d <- glm(density ~ water_depth, family = poisson, data = wave_d)
+vuong(model_zero_d, poisson_model_d)
 
-m0d <- zeroinfl(log_density ~ fetch_projected , data = wave_d, dist="negbin")
-m0d1 <- zeroinfl(log_density ~ fetch_projected + water_depth , data = wave_d, dist="negbin")
-m0d2 <- zeroinfl(log_density ~ fetch_projected + water_depth + slope_use , data = wave_d, dist="negbin")
+AIC(model_zero_d, poisson_model_d)
+BIC(model_zero_d, poisson_model_d)
 
-AIC(m0d)
-AIC(m0d1)
-AIC(m0d2)
+observed_d <- table(wave_d$density)
+predicted_d <- table(round(predict(model_zero_d, type = "response")))
 
-logLik(m0d)
-logLik(m0d1)
-logLik(m0d2)
+barplot(rbind(observed_d, predicted_d), beside = TRUE, col = c("black", "red"), legend.text = c("Observed", "Predicted"))
 
-vuong(m0d, m0d1)
+###
 
-estimates(m0d1)
-
-resid_d <- residuals(m0d1)
+resid_d <- residuals(model_zero_d)
 
 moran_resid_test <- moran.test(resid_d, weights_d)
 
-print(moran_resid_test) # insignificant
+print(moran_resid_test) # significant
 ```
 
 ## Mixed Effect Model
@@ -577,6 +585,13 @@ spatial3 <- glmmTMB(presence_absence ~ exposure + water_depth + cost_small + spe
                     data = wave4, 
                     family = binomial(link = "logit"))
 
-
 summary(spatial3)
+
+wave4$residuals <- residuals(spatial3)
+
+for (s in c("A", "D", "F", "H")) {
+  site_subset <- wave4[wave4$site_individual == s, ]
+  moran_test <- moran.test(site_subset$residuals, weights_list[[s]])
+  print(paste("Moran's I for site", s, ":", moran_test$estimate["Moran I statistic"]))
+}
 ```
